--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,13 +40,14 @@ RUN R CMD javareconf
 ENV NETCDF_INCLUDE=/usr/include
 
 #ADD install.R /tmp/ # comment out this line
-ADD libs.R /tmp/ # use this line to install required R libraries for xcms
+ADD libs.R /tmp/
 
 # invalidates cache every 24 hours
 ADD http://master.bioconductor.org/todays-date /tmp/
 
 # RUN R -f /tmp/install.R # comment out this line
-RUN R -f /tmp/libs.R # use this line to install required R libraries for xcms
+# use the following line to install required R libraries for xcms
+RUN R -f /tmp/libs.R
 
 # build dirs for UFRC
 RUN mkdir /ufrc /orange /bio /rlts 
