--- a/nextflow.config
+++ b/nextflow.config
@@ -19,9 +19,9 @@ timeline
 params 
 {
     input_folder = "./data"
-    plot_1 = 'plot_1.pdf'
-    plot_2 = 'plot_2.pdf'
-    plot_3 = 'plot_3.pdf'
+    plot_1 = 'chromatograms_1_mqc.jpeg'
+    plot_2 = 'ion_current_mqc.jpeg'
+    plot_3 = 'chromatograms_2_mqc.jpeg'
 }
 
 process 
