--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ timeline
 
 params 
 {
-    input_folder = "./data"
+    input_folder = "./data/DCSM/"
     plot_1 = 'chromatograms_1_mqc.jpeg'
     plot_2 = 'ion_current_mqc.jpeg'
     plot_3 = 'chromatograms_2_mqc.jpeg'
