--- a/nextflow.config
+++ b/nextflow.config
@@ -19,9 +19,12 @@ timeline
 params 
 {
     input_folder = "./data/DCSM/"
-    plot_1 = 'chromatograms_1_mqc.jpeg'
-    plot_2 = 'ion_current_mqc.jpeg'
-    plot_3 = 'chromatograms_2_mqc.jpeg'
+    sample_data = "DCSM"
+    peak_detail = "F"
+    plot_1 = "chromatograms_1_mqc.jpeg"
+    plot_2 = "ion_current_mqc.jpeg"
+    plot_3 = "chromatograms_2_mqc.jpeg"
+    plot_4 = "chromatograms_3_mqc.jpeg"
 }
 
 process 
@@ -32,7 +35,7 @@ process
     {
         time =  '15m'
         cpus = 2
-        memory = '8 GB'
+        memory = '16 GB'
         jobName = "run_sample"     
     }
 }
