--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,25 @@
+/**
+    Metabolomics Pipeline (MP)
+    Copyright (C) lemas-research-group          
+          
+    This script is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+    
+    This script is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    
+    You should have received a copy of the GNU General Public License
+    along with this script.  If not, see <http://www.gnu.org/licenses/>.
+    
+    For any bugs or problems found, please contact us at
+    - [email placeholder]; 
+    - [github placeholder]
+*/
+
 manifest {
     homePage = 'https://github.com/GalaxyDream/metabolomics_data_processing'
     description = 'Metabolomic data processing pipeline'
@@ -18,9 +40,10 @@ timeline
 
 params 
 {
-    input_folder = "./data/DCSM/"
-    sample_data = "DCSM"
-    peak_detail = "F"
+    input_folder = "./sample_data/"
+    sample_data = "other"
+    version = null
+    help = null
     plot_1 = "chromatograms_1_mqc.jpeg"
     plot_2 = "ion_current_mqc.jpeg"
     plot_3 = "chromatograms_2_mqc.jpeg"
@@ -31,7 +54,7 @@ process
 {
 //    executor = 'slurm'    
     
-    withName: run_sample
+    withName: peakDetection
     {
         time =  '15m'
         cpus = 2
