--- a/nextflow.config
+++ b/nextflow.config
@@ -40,25 +40,58 @@ timeline
 
 params 
 {
-    input_folder = "./sample_data/"
-    sample_data = "other"
+    input_folder = "./data/DCSM/"
+    sample_data = "DCSM"
     version = null
     help = null
+
     plot_1 = "chromatograms_1_mqc.jpeg"
     plot_2 = "ion_current_mqc.jpeg"
     plot_3 = "chromatograms_2_mqc.jpeg"
     plot_4 = "chromatograms_3_mqc.jpeg"
+
+    x_output = "config.xml"
+    mzmine_input = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
+    ms_level = 1
+    detector_noiselevel = 100
+    detector_scalelevel = 20
+    detector_windowsize = 0.3
+    buider_mintimespan = 0.04
+    builder_minheight = 5000.0
+    builder_abstolerance = 0.01
+    builder_ppm = 5.0
+    decov_snthreshold = 10.0
+    decov_wavscamin = 0.02
+    decov_wavscamax = 0.8
+    decov_peadurmin = 0.02
+    decov_peadurmax = 0.6
+    mzmine_peak_output = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/results/mzmine_dcsm_peaks.csv"
+
 }
 
 process 
 {
 //    executor = 'slurm'    
     
-    withName: peakDetection
+    withName: peakDetection_xcms
     {
         time =  '15m'
         cpus = 2
-        memory = '16 GB'
-        jobName = "run_sample"     
+        memory = '12 GB'
+//        jobName = "run_sample"     
+    }
+    withName: batchfile_generation_mzmine
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'
+//        jobName = "batchfile_generation_mzmine"     
+    }
+    withName: peakDetection_mzmine
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'
+//        jobName = "batchfile_generation_mzmine"     
     }
 }
