--- a/nextflow.config
+++ b/nextflow.config
@@ -45,21 +45,35 @@ params
     version = null
     help = null
 
-    plot_1 = "chromatograms_1_mqc.jpeg"
-    plot_2 = "ion_current_mqc.jpeg"
-    plot_3 = "chromatograms_2_mqc.jpeg"
-    plot_4 = "chromatograms_3_mqc.jpeg"
+// Common parameters
+
+    input_file = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
+    output_dir = "./"
+    mzTolerance = 0.00
+    noise = 100
+    ppm = 25
+
+// XCMS parameters
+
+    peakwidth_low = 0.6
+    peakwidth_high = 30.0
+    prefilter_low = 1
+    prefilter_high = 1000
+    integrate = 2
+    xcms_peak_output = "xcms_dcsm_peaks.csv"
+
+// MZmine parameters
 
     x_output = "config.xml"
-    mzmine_input = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
+//    mzmine_input = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
     ms_level = 1
-    detector_noiselevel = 100
+//    detector_noiselevel = 100
     detector_scalelevel = 20
     detector_windowsize = 0.3
     buider_mintimespan = 0.04
     builder_minheight = 5000.0
-    builder_abstolerance = 0.01
-    builder_ppm = 5.0
+//    builder_abstolerance = 0.01
+//    builder_ppm = 5.0
     decov_snthreshold = 10.0
     decov_wavscamin = 0.02
     decov_wavscamax = 0.8
@@ -91,7 +105,7 @@ process
     {
         time =  '15m'
         cpus = 1
-        memory = '4 GB'
+        memory = '16 GB'
 //        jobName = "batchfile_generation_mzmine"     
     }
 }
