update README and parameters description

--- a/nextflow.config
+++ b/nextflow.config
@@ -48,8 +48,8 @@ params
 // Common parameters
 
     input_file = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
-    output_dir = "./"
-    mzTolerance = 0.00
+    output_dir = "./"        //deprecated
+    mzTolerance = 0.00       //deprecated
     noise = 100
     ppm = 25
 
@@ -64,6 +64,7 @@ params
 
 // MZmine parameters
 
+    mzmine_dir = "/Users/xinsongdu/mnt/tools/mzmine2/MZmine-2.38/"
     x_output = "config.xml"
 //    mzmine_input = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/data/DCSM/DCSM.mzXML"
     ms_level = 1
@@ -79,7 +80,7 @@ params
     decov_wavscamax = 0.8
     decov_peadurmin = 0.02
     decov_peadurmax = 0.6
-    mzmine_peak_output = "/Users/xinsongdu/mnt/projects/metabolomics_data_processing/results/mzmine_dcsm_peaks.csv"
+    mzmine_peak_output = "./mzmine_dcsm_peaks.csv"
 
 }
 
