initialize 2 groups pca

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,10 +47,10 @@ timeline
 params 
 {
     //Change the following folder location (positive samples) to the location on your machine
-    input_dir_pos = "/ufrc/djlemas/xinsongdu/jupyter_notebook/data/metabolomics/POS"  
+    input_dir_pos = "/ufrc/djlemas/xinsongdu/jupyter_notebook/data/metabolomics/POS_2group"  
 
     //Change the following folder location (negative samples) to the location on your machine
-    input_dir_neg = "/ufrc/djlemas/xinsongdu/jupyter_notebook/data/metabolomics/NEG"
+    input_dir_neg = "/ufrc/djlemas/xinsongdu/jupyter_notebook/data/metabolomics/NEG_2group"
 
     version = null
     help = null
@@ -72,9 +72,12 @@ params
     raw_stats_merge_path = "./src/raw_stats_merge.py"
     venn_path = "./src/venn.py"
     python_pca_path = "./src/pca.py"
+    python_h_clustering = "./src/H_clustering.py"
+    python_barplot = "./src/bar_plot.py"
     data_info = "./src/data_info.py"
     peak_number_comparison_path = "./src/peak_number_comparison.py"
 
+    python_bs = "./src/blank_subtraction.py"
     R_01_path = "./src/file01_read_clean_save_all_datasets.R"
     R_02_threshold_path = "./src/file02_absolute_thereshold_based_flags_and_summaries.R"
     R_02_blankbased_path = "./src/file02_blankbased_thereshold_based_flags_and_summaries.R"
@@ -155,6 +158,10 @@ params
     output_POS_summaries_complete = "milk_data_pos_ph_summaries_complete.csv"
     output_NEG_summaries_complete = "milk_data_neg_ph_summaries_complete.csv"
 
+    // outputs for blank_subtraction
+    pos_data_withbg = "pos_data_withbg.csv"
+    neg_data_withbg = "neg_data_withbg.csv"
+
     // outputs for mqc_peak_number_comparison
     peak_number_comparison_mqc = "c_peak_number_comparison_mqc.txt"
 
@@ -197,6 +204,38 @@ params
     neg_venn_group1_withbg = "neg_venn_fat_withbg.csv"
     neg_venn_group2_withbg = "neg_venn_skim_withbg.csv"
     neg_venn_group3_withbg = "neg_venn_whole_withbg.csv"
+
+    // outputs for h_clustering_nobg
+    pos_h_clustering_group1_nobg = "pos_h_clustering_group1_nobg.png"
+    pos_h_clustering_group2_nobg = "pos_h_clustering_group2_nobg.png"
+    pos_h_clustering_group3_nobg = "pos_h_clustering_group3_nobg.png"
+    neg_h_clustering_group1_nobg = "neg_h_clustering_group1_nobg.png"
+    neg_h_clustering_group2_nobg = "neg_h_clustering_group2_nobg.png"
+    neg_h_clustering_group3_nobg = "neg_h_clustering_group3_nobg.png"
+
+    // outputs for h_clustering_withbg
+    pos_h_clustering_group1_withbg = "pos_h_clustering_group1_withbg.png"
+    pos_h_clustering_group2_withbg = "pos_h_clustering_group2_withbg.png"
+    pos_h_clustering_group3_withbg = "pos_h_clustering_group3_withbg.png"
+    neg_h_clustering_group1_withbg = "neg_h_clustering_group1_withbg.png"
+    neg_h_clustering_group2_withbg = "neg_h_clustering_group2_withbg.png"
+    neg_h_clustering_group3_withbg = "neg_h_clustering_group3_withbg.png"
+
+    // outputs for barplot_nobg
+    pos_barplot_group1_nobg = "pos_barplot_group1_nobg.png"
+    pos_barplot_group2_nobg = "pos_barplot_group2_nobg.png"
+    pos_barplot_group3_nobg = "pos_barplot_group3_nobg.png"
+    neg_barplot_group1_nobg = "neg_barplot_group1_nobg.png"
+    neg_barplot_group2_nobg = "neg_barplot_group2_nobg.png"
+    neg_barplot_group3_nobg = "neg_barplot_group3_nobg.png"
+
+    // outputs for barplot_withbg
+    pos_barplot_group1_withbg = "pos_barplot_group1_withbg.png"
+    pos_barplot_group2_withbg = "pos_barplot_group2_withbg.png"
+    pos_barplot_group3_withbg = "pos_barplot_group3_withbg.png"
+    neg_barplot_group1_withbg = "neg_barplot_group1_withbg.png"
+    neg_barplot_group2_withbg = "neg_barplot_group2_withbg.png"
+    neg_barplot_group3_withbg = "neg_barplot_group3_withbg.png"
 
 }
 
@@ -270,6 +309,12 @@ process
         time =  '15m'
         cpus = 1
         memory = '8 GB'   
+    }
+    withName: blank_subtraction
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
     }
     withName: raw_stats_merge_nobg
     {
