--- a/nextflow.config
+++ b/nextflow.config
@@ -178,8 +178,8 @@ params
     neg_200_withbg_ready = "neg_200_withbg_ready.csv"
 
     // outputs for pca_nobg
-    pca_POS_nobg = "pca_pos_nobg.png"
-    pca_NEG_nobg = "pca_neg_nobg.png"
+    pca_pos_nobg = "pca_pos_nobg.png"
+    pca_pos_nobg = "pca_neg_nobg.png"
 
     // outputs for pca_withbg
     pca_POS_withbg = "pca_pos_withbg.png"
