--- a/nextflow.config
+++ b/nextflow.config
@@ -179,11 +179,11 @@ params
 
     // outputs for pca_nobg
     pca_pos_nobg = "pca_pos_nobg.png"
-    pca_pos_nobg = "pca_neg_nobg.png"
+    pca_neg_nobg = "pca_neg_nobg.png"
 
     // outputs for pca_withbg
-    pca_POS_withbg = "pca_pos_withbg.png"
-    pca_NEG_withbg = "pca_neg_withbg.png"
+    pca_pos_withbg = "pca_pos_withbg.png"
+    pca_neg_withbg = "pca_neg_withbg.png"
 
     // outputs for venn_nobg
     pos_venn_nobg = "pos_venn_nobg.png"
