--- a/nextflow.config
+++ b/nextflow.config
@@ -71,8 +71,8 @@ params
     mzmine_result_extraction = "./src/mzmine_result_extraction.py"
     raw_stats_merge_path = "./src/raw_stats_merge.py"
     venn_path = "./src/venn.py"
-    python_pca_path = "./src/pca.py"
-    python_h_clustering = "./src/H_clustering.py"
+    python_pca = "./src/pca.py"
+    python_hclustering = "./src/H_clustering.py"
     python_barplot = "./src/bar_plot.py"
     data_info = "./src/data_info.py"
     peak_number_comparison_path = "./src/peak_number_comparison.py"
@@ -92,71 +92,6 @@ params
     // outputs for mqc_data_info
     pos_data_info_mqc = "a_pos_data_info_mqc.yaml"
     neg_data_info_mqc = "b_neg_data_info_mqc.yaml"
-
-    // inputs and outputs for R_01
-
-    POS_data_path = "pos_data_extracted.csv"
-    POS_design_path = "./data/pos_design.csv"
-    NEG_data_path = "neg_data_extracted.csv"
-    NEG_design_path = "./data/neg_design.csv"
-    POS_Rdata_path = "milk_data_pos_ph.Rdata"
-    POS_Rdata_csv_path = "milk_data_pos_ph.csv"
-    POS_Rdesign_path = "milk_design_pos_ph.Rdata"
-    NEG_Rdata_path = "milk_data_neg_ph.Rdata"
-    NEG_Rdata_csv_path = "milk_data_neg_ph.csv"
-    NEG_Rdesign_path = "milk_design_neg_ph.Rdata"
-
-    // outputs for R_02_thereshold
-
-    output_POS_absolute = "milk_data_pos_ph_absolute_threshold_flags_array.Rdata"
-    output_NEG_absolute = "milk_data_neg_ph_absolute_threshold_flags_array.Rdata"
-
-    // outputs for R_02_blankbased
-
-    output_POS_blankbased = "milk_data_pos_ph_blankbased_threshold_flags_array.Rdata"
-    output_NEG_blankbased = "milk_data_neg_ph_blankbased_threshold_flags_array.Rdata"
-
-    // outputs for R_03_anova
-
-    outputs_POS_anova = "milk_data_pos_ph_anova.Rdata"
-    outputs_NEG_anova = "milk_data_neg_ph_anova.Rdata"
-
-    // outputs for R_03_kruskalwallis
-
-    outputs_POS_kruskalwallis = "milk_data_pos_ph_kruskalwallis.Rdata"
-    outputs_NEG_kruskalwallis = "milk_data_neg_ph_kruskalwallis.Rdata"
-
-    // outputs for R_04
-
-    output_POS_allgroups_threshold_005 = "milk_data_pos_ph_allgroups_threshold_005.csv"
-    output_NEG_allgroups_threshold_005 = "milk_data_neg_ph_allgroups_threshold_005.csv"
-    output_POS_allgroups_threshold_100 = "milk_data_pos_ph_allgroups_threshold_100.csv"
-    output_NEG_allgroups_threshold_100 = "milk_data_neg_ph_allgroups_threshold_100.csv"
-    output_POS_allgroups_threshold_200 = "milk_data_pos_ph_allgroups_threshold_200.csv"
-    output_NEG_allgroups_threshold_200 = "milk_data_neg_ph_allgroups_threshold_200.csv"
-
-    output_POS_raw_filtered_005 = "milk_data_pos_filtered_005.csv"
-    output_POS_raw_filtered_100 = "milk_data_pos_filtered_100.csv"
-    output_POS_raw_filtered_200 = "milk_data_pos_filtered_200.csv"
-    output_NEG_raw_filtered_005 = "milk_data_neg_filtered_005.csv"
-    output_NEG_raw_filtered_100 = "milk_data_neg_filtered_100.csv"
-    output_NEG_raw_filtered_200 = "milk_data_neg_filtered_200.csv"
-
-    output_POS_allgroups_anova = "milk_data_pos_ph_allgroups_anova.csv"
-    output_POS_allgroups_kruskalwallis = "milk_data_pos_ph_allgroups_kruskalwallis.csv"
-    output_POS_allgroups_combination = "milk_data_pos_ph_allgroups_combination.csv"
-    output_NEG_allgroups_anova = "milk_data_neg_ph_allgroups_anova.csv"
-    output_NEG_allgroups_kruskalwallis = "milk_data_neg_ph_allgroups_kruskalwallis.csv"
-    output_NEG_allgroups_combination = "milk_data_neg_ph_allgroups_combination.csv"
-
-    output_POS_allgroups_combination_005 = "milk_data_pos_ph_allgroups_combination_005.csv"
-    output_NEG_allgroups_combination_005 = "milk_data_neg_ph_allgroups_combination_005.csv"
-    output_POS_allgroups_combination_100 = "milk_data_pos_ph_allgroups_combination_100.csv"
-    output_NEG_allgroups_combination_100 = "milk_data_neg_ph_allgroups_combination_100.csv"
-    output_POS_allgroups_combination_200 = "milk_data_pos_ph_allgroups_combination_200.csv"
-    output_NEG_allgroups_combination_200 = "milk_data_neg_ph_allgroups_combination_200.csv"
-    output_POS_summaries_complete = "milk_data_pos_ph_summaries_complete.csv"
-    output_NEG_summaries_complete = "milk_data_neg_ph_summaries_complete.csv"
 
     // outputs for blank_subtraction
     pos_data_withbg = "pos_data_withbg.csv"
