--- a/nextflow.config
+++ b/nextflow.config
@@ -93,6 +93,19 @@ params
     pos_data_info_mqc = "a_pos_data_info_mqc.yaml"
     neg_data_info_mqc = "b_neg_data_info_mqc.yaml"
 
+    // location of data and design files
+
+    POS_data_path = "pos_data_extracted.csv"
+    POS_design_path = "./data/pos_design.csv"
+    NEG_data_path = "neg_data_extracted.csv"
+    NEG_design_path = "./data/neg_design.csv"
+    POS_Rdata_path = "milk_data_pos_ph.Rdata"
+    POS_Rdata_csv_path = "milk_data_pos_ph.csv"
+    POS_Rdesign_path = "milk_design_pos_ph.Rdata"
+    NEG_Rdata_path = "milk_data_neg_ph.Rdata"
+    NEG_Rdata_csv_path = "milk_data_neg_ph.csv"
+    NEG_Rdesign_path = "milk_design_neg_ph.Rdata"
+
     // outputs for blank_subtraction
     pos_data_withbg = "pos_data_withbg.csv"
     neg_data_withbg = "neg_data_withbg.csv"
