--- a/nextflow.config
+++ b/nextflow.config
@@ -154,20 +154,12 @@ params
     neg_venn_group3_withbg = "neg_venn_whole_withbg.csv"
 
     // outputs for h_clustering_nobg
-    pos_h_clustering_group1_nobg = "pos_h_clustering_group1_nobg.png"
-    pos_h_clustering_group2_nobg = "pos_h_clustering_group2_nobg.png"
-    pos_h_clustering_group3_nobg = "pos_h_clustering_group3_nobg.png"
-    neg_h_clustering_group1_nobg = "neg_h_clustering_group1_nobg.png"
-    neg_h_clustering_group2_nobg = "neg_h_clustering_group2_nobg.png"
-    neg_h_clustering_group3_nobg = "neg_h_clustering_group3_nobg.png"
+    hclustering_pos_nobg = "hclustering_pos_nobg.png"
+    hclustering_neg_nobg = "hclustering_neg_nobg.png"
 
     // outputs for h_clustering_withbg
-    pos_h_clustering_group1_withbg = "pos_h_clustering_group1_withbg.png"
-    pos_h_clustering_group2_withbg = "pos_h_clustering_group2_withbg.png"
-    pos_h_clustering_group3_withbg = "pos_h_clustering_group3_withbg.png"
-    neg_h_clustering_group1_withbg = "neg_h_clustering_group1_withbg.png"
-    neg_h_clustering_group2_withbg = "neg_h_clustering_group2_withbg.png"
-    neg_h_clustering_group3_withbg = "neg_h_clustering_group3_withbg.png"
+    hclustering_pos_withbg = "hclustering_pos_withbg.png"
+    hclustering_neg_withbg = "hclustering_neg_withbg.png"
 
     // outputs for barplot_nobg
     pos_barplot_group1_nobg = "pos_barplot_group1_nobg.png"
