add option of whether using blank subtraction or not

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,6 +46,9 @@ timeline
 
 params 
 {
+    // Whether do blank subtraction or not
+    bs = "1"
+
     //Change the following folder location (positive samples) to the location on your machine
     input_dir_pos = "/ufrc/djlemas/xinsongdu/jupyter_notebook/data/metabolomics/POS_2group"  
 
