--- a/nextflow.config
+++ b/nextflow.config
@@ -59,8 +59,8 @@ params
     help = null
 
     //Change the following folder location (MzMine-2.28) to the location on your machine
-//    mzmine_dir = "/ufrc/djlemas/xinsongdu/jupyter_notebook/tools/MZmine-2.28/"
-    mzmine_dir = "MZmine-2.28/"
+    mzmine_dir = "/ufrc/djlemas/xinsongdu/jupyter_notebook/tools/MZmine-2.28/"
+//    mzmine_dir = "MZmine-2.28/"
 
     //Change the following file location (customized library for matching metabolites) to the location on your machine
     library = "/ufrc/djlemas/xinsongdu/jupyter_notebook/projects/metabolomics_data_processing/data/Positive_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
