--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ data/
 docker/
 materials/
 tmp/
-reproducibility_test/tmp/
+reproducibility_test/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
