--- a/nextflow.config
+++ b/nextflow.config
@@ -59,7 +59,7 @@ params
     help = null
 
     //Change the following folder location (MzMine-2.28) to the location on your machine
-    mzmine_dir = "/ufrc/djlemas/xinsongdu/jupyter_notebook/tools/MZmine-2.53/"
+    mzmine_dir = "/ufrc/djlemas/xinsongdu/jupyter_notebook/tools/MZmine-2.53-Linux/"
 //    mzmine_dir = "MZmine-2.28/"
 
     //Change the following file location (customized library for matching metabolites) to the location on your machine
