--- a/nextflow.config
+++ b/nextflow.config
@@ -76,6 +76,7 @@ params
     mzmine_result_extraction = "./src/mzmine_result_extraction.py"
     raw_stats_merge_path = "./src/raw_stats_merge.py"
     venn_path = "./src/venn.py"
+    python_addstats = "./src/add_stats.py"
     python_pca = "./src/pca.py"
     python_hclustering = "./src/H_clustering.py"
     python_barplot = "./src/bar_plot.py"
