add bar plot and venn diagram, as well as optimizing code

--- a/nextflow.config
+++ b/nextflow.config
@@ -78,7 +78,7 @@ params
     batchfile_generator_neg = "./src/batchfile_generator_neg_253.py"
     mzmine_result_extraction = "./src/mzmine_result_extraction.py"
     raw_stats_merge_path = "./src/raw_stats_merge.py"
-    venn_path = "./src/venn.py"
+    python_vd = "./src/venn.py"
     python_addstats = "./src/add_stats.py"
     python_pca = "./src/pca.py"
     python_hclustering = "./src/H_clustering.py"
@@ -143,24 +143,24 @@ params
     pca_neg_withbg = "pca_neg_withbg.png"
 
     // outputs for venn_nobg
-    pos_venn_nobg = "pos_venn_nobg.png"
-    pos_venn_group1_nobg = "pos_venn_fat_nobg.csv"
-    pos_venn_group2_nobg = "pos_venn_skim_nobg.csv"
-    pos_venn_group3_nobg = "pos_venn_whole_nobg.csv"
-    neg_venn_nobg = "neg_venn_nobg.png"
-    neg_venn_group1_nobg = "neg_venn_fat_nobg.csv"
-    neg_venn_group2_nobg = "neg_venn_skim_nobg.csv"
-    neg_venn_group3_nobg = "neg_venn_whole_nobg.csv"
+    vd_pos_nobg = "pos_vd_nobg.png"
+    pos_vd_group1_nobg = "pos_vd_group1_nobg.csv"
+    pos_vd_group2_nobg = "pos_vd_group2_nobg.csv"
+    pos_vd_both_nobg = "pos_vd_both_nobg.csv"
+    vd_neg_nobg = "neg_venn_nobg.png"
+    neg_vd_group1_nobg = "neg_vd_group1_nobg.csv"
+    neg_vd_group2_nobg = "neg_vd_group2_nobg.csv"
+    neg_vd_both_nobg = "neg_vd_both_nobg.csv"
 
     // outputs for venn_withbg
-    pos_venn_withbg = "pos_venn_withbg.png"
-    pos_venn_group1_withbg = "pos_venn_fat_withbg.csv"
-    pos_venn_group2_withbg = "pos_venn_skim_withbg.csv"
-    pos_venn_group3_withbg = "pos_venn_whole_withbg.csv"
-    neg_venn_withbg = "neg_venn_withbg.png"
-    neg_venn_group1_withbg = "neg_venn_fat_withbg.csv"
-    neg_venn_group2_withbg = "neg_venn_skim_withbg.csv"
-    neg_venn_group3_withbg = "neg_venn_whole_withbg.csv"
+    vd_pos_withbg = "pos_vd_withbg.png"
+    pos_vd_group1_withbg = "pos_vd_group1_withbg.csv"
+    pos_vd_group2_withbg = "pos_vd_group2_withbg.csv"
+    pos_vd_both_withbg = "pos_vd_both_withbg.csv"
+    vd_neg_withbg = "neg_venn_withbg.png"
+    neg_vd_group1_withbg = "neg_vd_group1_withbg.csv"
+    neg_vd_group2_withbg = "neg_vd_group2_withbg.csv"
+    neg_vd_both_withbg = "neg_vd_both_withbg.csv"
 
     // outputs for h_clustering_nobg
     hclustering_pos_nobg = "hclustering_pos_nobg.png"
@@ -171,20 +171,12 @@ params
     hclustering_neg_withbg = "hclustering_neg_withbg.png"
 
     // outputs for barplot_nobg
-    pos_barplot_group1_nobg = "pos_barplot_group1_nobg.png"
-    pos_barplot_group2_nobg = "pos_barplot_group2_nobg.png"
-    pos_barplot_group3_nobg = "pos_barplot_group3_nobg.png"
-    neg_barplot_group1_nobg = "neg_barplot_group1_nobg.png"
-    neg_barplot_group2_nobg = "neg_barplot_group2_nobg.png"
-    neg_barplot_group3_nobg = "neg_barplot_group3_nobg.png"
+    barplot_pos_nobg = "pos_barplot_group1_nobg.png"
+    barplot_neg_nobg = "neg_barplot_group1_nobg.png"
 
     // outputs for barplot_withbg
-    pos_barplot_group1_withbg = "pos_barplot_group1_withbg.png"
-    pos_barplot_group2_withbg = "pos_barplot_group2_withbg.png"
-    pos_barplot_group3_withbg = "pos_barplot_group3_withbg.png"
-    neg_barplot_group1_withbg = "neg_barplot_group1_withbg.png"
-    neg_barplot_group2_withbg = "neg_barplot_group2_withbg.png"
-    neg_barplot_group3_withbg = "neg_barplot_group3_withbg.png"
+    barplot_pos_withbg = "pos_barplot_group1_withbg.png"
+    barplot_neg_withbg = "neg_barplot_group1_withbg.png"
 
 }
 
@@ -296,6 +288,18 @@ process
         memory = '4 GB'   
     }
     withName: venn_diagram_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_withbg
     {
         time =  '15m'
         cpus = 1
