add parameters for barplot and hclustering

--- a/nextflow.config
+++ b/nextflow.config
@@ -164,19 +164,27 @@ params
 
     // outputs for h_clustering_nobg
     hclustering_pos_nobg = "hclustering_pos_nobg.png"
+    hclustering_pos_nobg_om = "hclustering_onlymatched_pos_nobg.png"
     hclustering_neg_nobg = "hclustering_neg_nobg.png"
+    hclustering_neg_nobg_om = "hclustering_onlymatched_neg_nobg.png"
 
     // outputs for h_clustering_withbg
     hclustering_pos_withbg = "hclustering_pos_withbg.png"
+    hclustering_pos_withbg_om = "hclustering_onlymatched_pos_withbg.png"
     hclustering_neg_withbg = "hclustering_neg_withbg.png"
+    hclustering_neg_withbg_om = "hclustering_onlymatched_neg_withbg.png"
 
     // outputs for barplot_nobg
     barplot_pos_nobg = "pos_barplot_group1_nobg.png"
+    barplot_pos_nobg_om = "pos_onlymatched_barplot_group1_nobg.png"
     barplot_neg_nobg = "neg_barplot_group1_nobg.png"
+    barplot_neg_nobg_om = "neg_onlymatched_barplot_group1_nobg.png"
 
     // outputs for barplot_withbg
     barplot_pos_withbg = "pos_barplot_group1_withbg.png"
+    barplot_pos_withbg_om = "pos_onlymatched_barplot_group1_withbg.png"
     barplot_neg_withbg = "neg_barplot_group1_withbg.png"
+    barplot_neg_withbg_om = "neg_onlymatched_barplot_group1_withbg.png"
 
 }
 
