--- a/nextflow.config
+++ b/nextflow.config
@@ -186,6 +186,18 @@ params
     barplot_neg_withbg = "neg_barplot_group1_withbg.png"
     barplot_neg_withbg_om = "neg_onlymatched_barplot_group1_withbg.png"
 
+    // regarding mummichog
+    python_mummichog_input_prepare = "./src/mummichog_input_prepare.py"
+    data_pos_nobg_mummichog = "data_pos_beforebs.txt"
+    data_pos_nobg_mummichog_out = "data_pos_before_blank_subtraction"
+    data_neg_nobg_mummichog = "data_neg_beforebs.txt"
+    data_neg_nobg_mummichog_out = "data_neg_before_blank_subtraction"
+    data_pos_withbg_mummichog = "data_pos_afterbs.txt"
+    data_pos_withbg_mummichog_out = "data_pos_after_blank_subtraction"
+    data_neg_withbg_mummichog = "data_neg_afterbs.txt"
+    data_neg_withbg_mummichog_out = "data_neg_after_blank_subtraction"
+    cutoff = 0.5
+
 }
 
 process 
@@ -324,5 +336,11 @@ process
         time =  '15m'
         cpus = 1
         memory = '4 GB'   
+    }
+    withName: mummichog_report
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
     }
 }
