--- a/nextflow.config
+++ b/nextflow.config
@@ -188,15 +188,18 @@ params
 
     // regarding mummichog
     python_mummichog_input_prepare = "./src/mummichog_input_prepare.py"
-    data_pos_nobg_mummichog = "data_pos_beforebs.txt"
-    data_pos_nobg_mummichog_out = "data_pos_before_blank_subtraction"
-    data_neg_nobg_mummichog = "data_neg_beforebs.txt"
-    data_neg_nobg_mummichog_out = "data_neg_before_blank_subtraction"
-    data_pos_withbg_mummichog = "data_pos_afterbs.txt"
-    data_pos_withbg_mummichog_out = "data_pos_after_blank_subtraction"
-    data_neg_withbg_mummichog = "data_neg_afterbs.txt"
-    data_neg_withbg_mummichog_out = "data_neg_after_blank_subtraction"
-    cutoff = 0.5
+    data_pos_nobg_group1_mummichog = "data_pos_nobg_group1_mummichog.txt"
+    data_pos_nobg_group1_mummichog_out = "data_pos_group1_before_blank_subtraction"
+    data_pos_nobg_group2_mummichog = "data_pos_nobg_group2_mummichog.txt"
+    data_pos_nobg_group2_mummichog_out = "data_pos_group2_before_blank_subtraction"
+    data_pos_nobg_both_mummichog = "data_pos_nobg_both_mummichog.txt"
+    data_pos_nobg_both_mummichog_out = "data_pos_both_before_blank_subtraction"
+    data_pos_withbg_group1_mummichog = "data_pos_withbg_group1_mummichog.txt"
+    data_pos_withbg_group1_mummichog_out = "data_pos_group1_after_blank_subtraction"
+    data_pos_withbg_group2_mummichog = "data_pos_withbg_group2_mummichog.txt"
+    data_pos_withbg_group2_mummichog_out = "data_pos_group2_after_blank_subtraction"
+    data_pos_withbg_both_mummichog = "data_pos_withbg_both_mummichog.txt"
+    data_pos_withbg_both_mummichog_out = "data_pos_both_after_blank_subtraction"
 
 }
 
