prepare for run all with mummichog

--- a/nextflow.config
+++ b/nextflow.config
@@ -340,7 +340,13 @@ process
         cpus = 1
         memory = '4 GB'   
     }
-    withName: mummichog_report
+    withName: mummichog_report_nobg
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
+    }
+    withName: mummichog_report_withbg
     {
         time = '15m'
         cpus = 1
