debug (adjust one error parameters for positive mode) and folder cleaning

--- a/nextflow.config
+++ b/nextflow.config
@@ -66,8 +66,9 @@ params
 //    mzmine_dir = "MZmine-2.28/"
 
     //Change the following file location (customized library for matching metabolites) to the location on your machine
-    library = "Positive_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
-    
+    pos_library = "Positive_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
+    neg_library = "Positive_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
+
     pos_config = "pos_config.xml"
     neg_config = "neg_config.xml"
 
