--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - mkdir -p ~/bin; cp nextflow ~/bin
 script:
   # Functional tests
-  - travis_wait 720 bash functional_test/UMPIRE-test.sh
+  - bash .travis/UMPIRE-test.sh
