--- a/nextflow.config
+++ b/nextflow.config
@@ -189,6 +189,7 @@ params
     data_pos_withbg_group2_mummichog_out = "data_pos_group2_after_blank_subtraction"
     data_pos_withbg_both_mummichog = "data_pos_withbg_both_mummichog.txt"
     data_pos_withbg_both_mummichog_out = "data_pos_both_after_blank_subtraction"
+    cutoff = 0.05
 
 }
 
