--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,9 @@
 /**
     UMPIRE: A Reproducible Untargeted Metabolomics Data Processing Pipeline
-    Copyright (C) LemasLab         
+    Description : This file in the configuration of UMPIRE, including resource allocation and parameters information
+    Copyright   : (C) LemasLab
+    Author      : Xinsong Du
+    License     : GNU GPL-v3.0 License
           
     This script is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -16,13 +19,13 @@
     along with this script.  If not, see <http://www.gnu.org/licenses/>.
     
     For any bugs or problems found, please contact us at
-    - [email placeholder]; 
-    - [github placeholder]
+    - xinsongdu@ufl.edu, manfiol@ufl.edu, djlemas@ufl.edu; 
+    - https://github.com/GalaxyDream/UMPIRE
 */
 
 manifest {
-    homePage = 'https://github.com/GalaxyDream/metabolomics_data_processing'
-    description = 'Metabolomic data processing pipeline'
+    homePage = 'https://github.com/GalaxyDream/UMPIRE'
+    description = 'UMPIRE: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
     mainScript = 'run_all.nf'
     version = '0.0.0'
 }
