--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ install:
   - mkdir -p ~/bin; cp nextflow ~/bin
 script:
   # Functional tests
-  - travis_wait 40 bash .travis/UMPIRE-test.sh
+  - travis_wait 30 bash .travis/UMPIRE-test_all.sh
+  - bash .travis/UMPIRE-test_aftermzmine.sh
