adjust README and debug for container mode (using docker or singularity)

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,5 @@
 /**
-    UMPIRE: A Reproducible Untargeted Metabolomics Data Processing Pipeline
+    ReUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline
     Description : This file in the configuration of UMPIRE, including resource allocation and parameters information
     Copyright   : (C) LemasLab
     Author      : Xinsong Du
@@ -20,12 +20,12 @@
     
     For any bugs or problems found, please contact us at
     - xinsongdu@ufl.edu, manfiol@ufl.edu, djlemas@ufl.edu; 
-    - https://github.com/GalaxyDream/UMPIRE
+    - https://github.com/lemaslab/UMPIRE
 */
 
 manifest {
-    homePage = 'https://github.com/GalaxyDream/UMPIRE'
-    description = 'UMPIRE: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
+    homePage = 'https://github.com/lemaslab/UMPIRE'
+    description = 'ReUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
     mainScript = 'run_all.nf'
     version = '0.0.0'
 }
@@ -50,10 +50,10 @@ timeline
 params 
 {
     // Whether do blank subtraction or not
-    bs = "1"
+    bs = true
 
     // Use singularity?
-    use_singularity = "0"
+    container = "Docker"
 
     //Change the following folder location (positive samples) to the location on your machine
     input_dir_pos = "data/POS/"  
