change code folder name from src to reump

--- a/nextflow.config
+++ b/nextflow.config
@@ -80,21 +80,21 @@ params
     pos_data_nobg = "pos_data_before_blank_subtraction.csv"
     neg_data_nobg = "neg_data_before_blank_subtraction.csv"
 
-    batchfile_generator_pos = "./src/batchfile_generator_pos_253.py"
-    batchfile_generator_neg = "./src/batchfile_generator_neg_253.py"
-    python_vd = "./src/venn.py"
-    python_addstats = "./src/add_stats.py"
-    python_pca = "./src/pca.py"
-    python_hclustering = "./src/H_clustering.py"
-    python_barplot = "./src/bar_plot.py"
-    data_info = "./src/data_info.py"
-    peak_number_comparison_path = "./src/peak_number_comparison.py"
+    batchfile_generator_pos = "./reump/batchfile_generator_pos_253.py"
+    batchfile_generator_neg = "./reump/batchfile_generator_neg_253.py"
+    python_vd = "./reump/venn.py"
+    python_addstats = "./reump/add_stats.py"
+    python_pca = "./reump/pca.py"
+    python_hclustering = "./reump/H_clustering.py"
+    python_barplot = "./reump/bar_plot.py"
+    data_info = "./reump/data_info.py"
+    peak_number_comparison_path = "./reump/peak_number_comparison.py"
 
-    python_bs = "./src/blank_subtraction.py"
+    python_bs = "./reump/blank_subtraction.py"
 
     mqc_dir = "./results/mqc/"
-    experiments_info = "./src/software_descriptions_mqc.txt"
-    mqc_config = "./src/multiqc_config.yaml"
+    experiments_info = "./reump/software_descriptions_mqc.txt"
+    mqc_config = "./reump/multiqc_config.yaml"
 
     // outputs for mqc_data_info
     pos_data_info_mqc = "a_pos_data_info_mqc.yaml"
@@ -177,7 +177,7 @@ params
     barplot_neg_withbg_om = "neg_onlymatched_barplot_group1_withbg.png"
 
     // regarding mummichog
-    python_mummichog_input_prepare = "./src/mummichog_input_prepare.py"
+    python_mummichog_input_prepare = "./reump/mummichog_input_prepare.py"
     data_pos_nobg_group1_mummichog = "data_pos_nobg_group1_mummichog.txt"
     data_pos_nobg_group1_mummichog_out = "data_pos_group1_before_blank_subtraction"
     data_pos_nobg_group2_mummichog = "data_pos_nobg_group2_mummichog.txt"
@@ -230,12 +230,6 @@ process
         memory = '4 GB'   
     }
     withName: raw_stats_merge_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: raw_stats_merge_withbg
     {
         time =  '15m'
         cpus = 1
