--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /**
-    ReUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline
-    Description : This file in the configuration of UMPIRE, including resource allocation and parameters information
+    RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline
+    Description : This file in the configuration of RUMP, including resource allocation and parameters information
     Copyright   : (C) LemasLab
     Author      : Xinsong Du
     License     : GNU GPL-v3.0 License
@@ -20,12 +20,12 @@
     
     For any bugs or problems found, please contact us at
     - xinsongdu@ufl.edu, manfiol@ufl.edu, djlemas@ufl.edu; 
-    - https://github.com/lemaslab/UMPIRE
+    - https://github.com/lemaslab/RUMP
 */
 
 manifest {
-    homePage = 'https://github.com/lemaslab/UMPIRE'
-    description = 'ReUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
+    homePage = 'https://github.com/lemaslab/RUMP'
+    description = 'RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
     mainScript = 'run_all.nf'
     version = '0.0.0'
 }
