enrich output information, change run_all to main

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,7 +26,7 @@
 manifest {
     homePage = 'https://github.com/lemaslab/RUMP'
     description = 'RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
-    mainScript = 'run_all.nf'
+    mainScript = 'RUMP.nf'
     version = '0.0.0'
 }
 
@@ -45,6 +45,17 @@ report
 timeline 
 {
     enabled = true
+}
+
+workflow.onComplete = {
+    // any workflow property can be used here
+    println "Pipeline complete"
+    println "Command line: $workflow.commandLine"
+}
+
+
+workflow.onError = {
+    println "Oops .. something when wrong"
 }
 
 params 
