adjust coding style to PEP 8

--- a/nextflow.config
+++ b/nextflow.config
@@ -102,7 +102,7 @@ params
     python_vd = "./rump/venn.py"
     python_addstats = "./rump/add_stats.py"
     python_pca = "./rump/pca.py"
-    python_hclustering = "./rump/H_clustering.py"
+    python_hclustering = "./rump/h_clustering.py"
     python_barplot = "./rump/bar_plot.py"
     data_info = "./rump/data_info.py"
     peak_number_comparison_path = "./rump/peak_number_comparison.py"
