add unknown search

--- a/nextflow.config
+++ b/nextflow.config
@@ -106,8 +106,8 @@ params
     python_barplot = "./rump/bar_plot.py"
     data_info = "./rump/data_info.py"
     peak_number_comparison_path = "./rump/peak_number_comparison.py"
-
     python_bs = "./rump/blank_subtraction.py"
+    r_unknown_search = "./rump/unknown_search.R"
 
     mqc_dir = "./results/mqc/"
     experiments_info = "./rump/software_descriptions_mqc.txt"
@@ -192,6 +192,14 @@ params
     barplot_pos_withbg_om = "pos_onlymatched_barplot_group1_withbg.png"
     barplot_neg_withbg = "neg_barplot_group1_withbg.png"
     barplot_neg_withbg_om = "neg_onlymatched_barplot_group1_withbg.png"
+
+    // outputs for unknown_search_nobg
+    unknown_search_pos_nobg = "unknown_search_pos_nobg.csv"
+    unknown_search_neg_nobg = "unknown_search_neg_nobg.csv"
+
+    // outputs for unknown_search_withbg
+    unknown_search_pos_withbg = "unknown_search_pos_withbg.csv"
+    unknown_search_neg_withbg = "unknown_search_neg_withbg.csv"
 
     // regarding mummichog
     python_mummichog_input_prepare = "./rump/mummichog_input_prepare.py"
