--- a/nextflow.config
+++ b/nextflow.config
@@ -109,6 +109,11 @@ params
     python_bs = "./rump/blank_subtraction.py"
     r_unknown_search = "./rump/unknown_search.R"
 
+    mz_col_pos_nobg = "row.m.z"
+    mz_col_neg_nobg = "row.m.z"
+    mz_col_pos_withbg = "row.m.z"
+    mz_col_neg_withbg = "row.m.z"
+
     mqc_dir = "./results/mqc/"
     experiments_info = "./rump/software_descriptions_mqc.txt"
     mqc_config = "./rump/multiqc_config.yaml"
